--- a/mysite.css
+++ b/mysite.css
@@ -10,6 +10,7 @@ body {
 	padding-left:175px;
 }
 .sidebar {
+	height: 100%;
 	padding-left:20px;
 	float:left;
 	border-right:1px solid lightgrey;
@@ -49,7 +50,7 @@ body {
 	text-decoration: underline;
 }
 .client ul {
-	margin:7px 5px 20px 5px;
+	margin:0px 5px 20px 5px;
 	padding-left:86em;
 }
 .client li {
@@ -71,27 +72,65 @@ body {
 	color:#0645ad;
 }
 .leftnav ul {
-	padding-left:15px;
+	font-size: 15px;
+	padding:0px;
+	float:left;
+	padding-left:5px;
 	margin:0px;
-}
-.leftnav ul li {
-	display:inline-block;
 	list-style-type: none;
 }
-.leftnav li.article  {
-	
+.leftnav ul li {
+	color:#0645ad;
+	display:inline;
 }
-.leftnav li.talk {
-	width:300px;
-	border-right:1px solid lightgrey;
-	border-left:1px solid lightgrey;
-	border-bottom:1px solid lightgrey;
-	padding:8px 8px 8px 8px;
+
+.leftnav li {
+	border:1px solid lightgrey;
+	background-color: #f6f6f6;
+	padding:7px 10px;
+	border-radius: 5px;
 }
+
+.leftnav a {
+	text-decoration: none;
+}
+.leftnav a:hover {
+	text-decoration: underline;
+	color:#0645ad;
+}
+.rightnav ul {
+	font-size: 15px;
+	padding:0px;
+	margin:0px;
+	list-style-type: none;
+	float:right;
+	padding-right:15px;
+}
+.rightnav a {
+	text-decoration: none;
+}
+.rightnav a:hover {
+	text-decoration: underline;
+	color:#0645ad;
+}
+.rightnav ul li {
+	color:#0645ad;
+	display:inline;
+}
+.rightnav li  {
+	border:1px solid lightgrey;
+	border-radius: 5px;
+	background-color: #f6f6f6;
+	padding:7px 10px;
+}
+
 .client li.user {
 	color:grey;
 }
 .container {
+	line-height: 20px;
+	font-family: arial;
+	font-size: 14px;
 	padding-right: 25px;
 	padding-left:20px;
 }
@@ -99,7 +138,7 @@ body {
 	font-family: times;
 	font-weight: lighter;
 	border-bottom:1px solid lightgrey;
-	margin-right:35px;
+	margin-right:0px;
 	margin-bottom:3px;
 }
 .container h4 {
@@ -127,6 +166,27 @@ body {
 	text-decoration: underline;
 }
 .topic {
+	line-height: 22px;
+	background-color: #f6f6f6;
+	font-size:13px;
+	color:#0645ad;
+	width:220px;
 	border:1px solid lightgrey;
-	width:200px;
+	background-color: 
+}
+.topic h4 {
+	font-style: normal;
+}
+.topic ul {
+	list-style-type: none;
+
+}
+.edit {
+	color:black;
+	font-weight: lighter;
+	font-size: 12px;
+}
+h2 {
+	font-weight: lighter;
+	border-bottom: 1px solid lightgrey;
 }
