--- a/mysite.css
+++ b/mysite.css
@@ -222,6 +222,12 @@ h2 {
 	background-color: #C0C0C0;
 	margin:5px;
 	padding:1px;
-
-
+}
+p.overview {
+	float:left;
+	text-align: left;
+	padding-left: 5px;
+}
+p.info {
+	padding-right:18px;
 }
