--- a/mysite.css
+++ b/mysite.css
@@ -15,7 +15,7 @@ body {
 	height: 100%;
 	padding-left:20px;
 	float:left;
-	border-right:1px solid lightgrey;
+	border-right:1px solid #a7d7f9;
 	width:156px;
 	background-color: #f6f6f6;
 	padding-top:3px;
