--- a/mysite.css
+++ b/mysite.css
@@ -1,4 +1,5 @@
 body {
+	background-color: #f6f6f6;
 	margin:0px;
 	padding:0px;
 }
@@ -9,10 +10,11 @@ body {
 	padding-bottom: 6px;
 }
 .content {
+	background-color: white;
 	padding-left:175px;
 }
 .sidebar {
-	height: 100%;
+	height:1200px;
 	padding-left:20px;
 	float:left;
 	border-right:1px solid #a7d7f9;
@@ -85,13 +87,27 @@ body {
 	color:#0645ad;
 	text-decoration: underline;
 }
-.editlinks {
-	margin-right:60px;
-	float:right;
-	height: 10px;
-	width: 10px;
-	background-image:url(https://en.wikipedia.org/w/extensions/Wikidata/extensions/Wikibase/client/resources/images/WBC-Asset-Pencil.png?3bd62);
+.editlinks span:hover{
+	color:#0645ad;
+	text-decoration: underline;
 }
+.editlinks .pen {
+	margin-top:1px;
+	margin-left:70px;
+	background-image: no-repeat;
+	height:10px;
+	width:10px;
+ 	background-image:url(https://en.wikipedia.org/w/extensions/Wikidata/extensions/Wikibase/client/resources/images/WBC-Asset-Pencil.png?3bd62);
+ 	float:left;
+}
+.editlinks span {
+	font-size: 12px;
+	color:grey;
+	float:right;
+	padding-right:25px;
+	font-family: sans-serif;
+}
+
 .client ul {
 	margin:0px 5px 20px 5px;
 	padding-left:86em;
