--- a/mysite.css
+++ b/mysite.css
@@ -219,30 +219,36 @@ body {
 	padding-right: 25px;
 	padding-left:26px;
 }
+.container h4 {
+	margin-bottom:18px;
+}
 .container h1 {
 	margin-top:10px;
-	font-family: times;
+	font-size:30px;
+	font-family: serif;
 	font-weight: lighter;
 	border-bottom:1px solid lightgrey;
 	margin-right:0px;
 	margin-bottom:3px;
 }
 .container h4 {
-	margin-top:4px;
+	font-size:13px;
+	margin-top:7px;
 	font-weight: lighter;
 	color:#252525;
 }
-.container-text {
-	
+.container-text p {
+	margin-bottom:2px;
+	margin-top:8px;
+	line-height: 22px;
+
 }
 .container-text h4 {
+	margin-top:0px;
+	margin-bottom:0px;
 	font-style:italic;
-	padding-left:20px;
-}
-.container table {
-	border:1px solid lightgrey;
-	width:17%;
-	font-family: times;
+	padding-left:22px;
+	font-size:14px;
 }
 .container-text a {
 	text-decoration: none;
@@ -281,12 +287,12 @@ h2 {
 	background-color: #f9f9f9;
 	height: 1000px;
 	float:right;
-	width:290px;
+	width:295px;
 	border:1px solid lightgrey;
 }
 .table h3 {
 	margin:5px;
-	padding:5px;
+	padding:4px;
 	text-align: center;
 	background-color: #C0C0C0;
 }
