--- a/mysite.css
+++ b/mysite.css
@@ -4,10 +4,12 @@ body {
 	padding:0px;
 }
 .home {
+	margin-left:-15px;
 	padding-left:1px;
-	background-color: #f6f6f6;
-	width:155px;
+	padding-top:3px;
+	width:170px;
 	padding-bottom: 6px;
+	background: linear-gradient(to top,rgb(246,246,246) , white);
 }
 .content {
 	background-color: white;
@@ -20,7 +22,6 @@ body {
 	border-right:1px solid #a7d7f9;
 	width:156px;
 	background-color: #f6f6f6;
-	padding-top:3px;
 	font-family:arial sans-serif;
 }
 .sidebar ul {
@@ -113,6 +114,7 @@ body {
 	padding-top:7px;
 }
 .client li.login {
+
 	padding-left:15px;
 	background-repeat: no-repeat;
 	background-image:url(https://en.wikipedia.org/w/skins/Vector/images/user-icon.svg?7b5d5);
@@ -140,6 +142,7 @@ body {
 	color:#0645ad;
 }
 .navigation {
+	background: linear-gradient(to top,rgb(246,246,246) , white);
 	padding-bottom:34px;
 	border-bottom:1px solid #a7d7f9;
 
@@ -199,6 +202,10 @@ body {
 .rightnav li.search {
 	padding-left:4px;
 }
+.search input.searchicon {
+
+}
+
 .leftnav li.article {
 	color:black;
 	border-right:1px solid #a7d7f9;
@@ -224,10 +231,11 @@ body {
 }
 .container h1 {
 	margin-top:10px;
-	font-size:30px;
-	font-family: serif;
+	font-size:29px;
+	padding-bottom:9px;
+	font-family: georgia;
 	font-weight: lighter;
-	border-bottom:1px solid lightgrey;
+	border-bottom:1px solid #aaa;
 	margin-right:0px;
 	margin-bottom:3px;
 }
@@ -238,14 +246,15 @@ body {
 	color:#252525;
 }
 .container-text p {
-	margin-bottom:2px;
-	margin-top:8px;
-	line-height: 22px;
+	padding:0px;
+	margin-bottom:6px;
+	margin-top:6px;
+	line-height:1.6;
 
 }
 .container-text h4 {
 	margin-top:0px;
-	margin-bottom:0px;
+	margin-bottom:8px;
 	font-style:italic;
 	padding-left:22px;
 	font-size:14px;
@@ -257,19 +266,73 @@ body {
 .container-text a:hover {
 	text-decoration: underline;
 }
+.container-text sup {
+	font-size:11px;
+	color:#0645ad;
+}
 .topic {
-	line-height: 22px;
-	background-color: #f6f6f6;
+	padding:4px;
+	margin-top:8px;
+	line-height:22px;
+	background-color: #f9f9f9;
 	font-size:13px;
 	color:#0645ad;
-	width:220px;
-	border:1px solid grey;
+	width:200px;
+	height: 322px;
+	border:1px solid #aaaaaa;
 	background-color: 
 }
 .topic h4 {
+	padding-left:51px;
+	padding-top:3px;
+	margin-bottom:3px;
+	font-weight:bold;
+	font-size: 13px;
+	font-family:sans-serif;
 	font-style: normal;
 }
+.topic h4 span {
+	padding-left: 3px;
+	font-weight: normal;
+}
+.topic .topiclevel1-items {
+	padding-left: 27px;
+
+}
+.topic .topiclevel1 span {
+	padding-right: 2px;
+}
+.topic .topiclevel2 span {
+	padding-right: 2px;
+}
+.topic .topiclevel3 span {
+	padding-right: 2px;
+}
+.topic .topiclevel4 span {
+	padding-right: 2px;
+}
+.topic .topiclevel5 span {
+	padding-right: 2px;
+}
+.topic .topiclevel6 span {
+	padding-right: 2px;
+}
+.topic .topiclevel7 span {
+	padding-right: 2px;
+}
+.topic .topiclevel8 span {
+	padding-right: 2px;
+}
+.topic .topiclevel9 span {
+	padding-right: 2px;
+}
+
 .topic ul {
+	margin:0px;
+	padding:0px;
+	padding-left:3px;
+}
+.topic li {
 	list-style-type: none;
 
 }
