--- a/mysite.css
+++ b/mysite.css
@@ -223,7 +223,7 @@ body {
 	line-height: 20px;
 	font-family: arial;
 	font-size: 14px;
-	padding-right: 25px;
+	padding-right: 24px;
 	padding-left:26px;
 }
 .container h4 {
@@ -273,14 +273,18 @@ body {
 .topic {
 	padding:4px;
 	margin-top:8px;
+	margin-bottom:24px;
 	line-height:22px;
 	background-color: #f9f9f9;
 	font-size:13px;
 	color:#0645ad;
 	width:200px;
-	height: 322px;
+	height: 323px;
 	border:1px solid #aaaaaa;
 	background-color: 
+}
+.topic h2 {
+	font-family: georgia;
 }
 .topic h4 {
 	padding-left:51px;
@@ -337,52 +341,134 @@ body {
 
 }
 .edit {
+	padding-left:10px;
 	color:black;
 	font-weight: lighter;
 	font-size: 12px;
 }
 h2 {
-	width: 1390px;
+	font-family: georgia;
+	width: 1372px;
 	font-weight: lighter;
-	border-bottom: 1px solid lightgrey;
+	border-bottom: 1px solid #aaaaaa;
+	padding-bottom: 1px;
 }
+h3 {
+	font-size:17px;
+	margin-top:17px;
+	margin-bottom:8px;
+}
+
 .table {
+	margin-top:6px;
 	background-color: #f9f9f9;
-	height: 1000px;
+	height: 100%;
 	float:right;
-	width:295px;
-	border:1px solid lightgrey;
+	width:292px;
+	border:1px solid #aaaaaa;
 }
 .table h3 {
+	padding:3px;
 	margin:5px;
-	padding:4px;
 	text-align: center;
 	background-color: #C0C0C0;
 }
 .table img {
+	padding: 0 1px 0 1px;
+	height:157px;
 	margin-left:5px;
+	width:280px;
 }
 .table p {
 	text-align: center;
 	margin:0px;
 	padding:0px;
-	font-size: 13px;
-	margin-top:-3px;
+	font-size: 12px;
+	line-height: 16px;
+	margin-top: -4px;
 }
 .table h4 {
+	line-height: 18px;
 	text-align: center;
 	font-style:normal;
-	font-size:13px;
+	font-size:12px;
 	font-weight: bold;
 	background-color: #C0C0C0;
-	margin:5px;
+	margin:5px 5px 0px 5px;
 	padding:1px;
 }
-p.overview {
-	float:left;
-	text-align: left;
-	padding-left: 5px;
+
+.table th.th1 {
+	font-size: 12px;
+	padding-left: 4px;
+	padding-right: 5px;
 }
-p.info {
-	padding-right:18px;
+.table th.th2 {
+	font-size: 12px;	
+	padding-left: 4px;
+	padding-right: 5px;
+	float:left;	
+}
+.table th.th3 {
+	font-size: 12px;	
+	padding-left: 4px;
+	padding-right: 5px;
+	float:left;
+}
+.table th.th4 {
+	color:blue;
+	font-size: 12px;	
+	padding-left: 4px;
+	padding-right: 5px;
+	float:left;
+}
+.table th.th5 {
+	color:blue;
+	font-size: 12px;	
+	padding-left: 4px;
+	float:left;
+}
+.table th.th6 {
+	color:blue;
+	font-size: 12px;	
+	padding-left: 4px;
+	padding-right: 10px;
+	float:left;
+}
+.table th.th7 {
+	color:blue;
+	font-size: 12px;	
+	padding-left: 4px;
+	padding-right:10px;
+	float:left;
+}
+.table th.th8 {
+	font-size: 12px;	
+	padding-left: 4px;
+	padding-right:50px;
+	float:left;
+}
+.table th.th9 {
+	color:blue;
+	font-size: 12px;	
+	padding-left: 4px;
+	padding-right:50px;
+	float:left;
+}
+.table th.th10 {
+	color:blue;
+	font-size: 12px;	
+	padding-left: 4px;
+	padding-right:50px;
+	float:left;
+}
+.table td  {
+	padding-bottom: 3px;
+	font-size: 12px;
+	line-height: 18px;
+}
+.table sup {
+	padding:0px;
+	margin:0px;
+	font-size: 8px;
 }
